package com.rdvmedic.rdv_api.model;

public enum RoleName {
    ROLE_PATIENT,
    ROLE_DOCTOR,
    ROLE_ADMIN
}
