package com.rdvmedic.rdv_api.model;

public enum UserType {
    PATIENT,
    DOCTOR,
    ADMIN
}
